# munshi

./: .gitignore  ARCHITECTURE.md  README.md  munshi.db  pyproject.toml  vercel.json
agents/: compliance.py  parallel.py  single.py
backend/: main.py
demo/: pitch_notes.md  run.sh
demo/ui/: app.js  index.html  start.sh  styles.css  workbench.html
demo/ui/data/: scenario.json  world.json
deploy/: munshi.service  redeploy.sh  setup.sh
frontend/: demo.html  index.html  styles.css  workbench.html  workbench.js
frontend/data/: run_result.json  scenario.json  world.json
munshi/: __init__.py  scenario.py  scorer.py  solver.py  task_factory.py  trace.py
worlds/up_pension/: README.md  __init__.py  predicates.py  rules.py  schemas.py  seed.py  server.py  task.py  tools.py
worlds/up_pension/agents/default/: __init__.py  graph.py  prompts.py
worlds/up_pension/research/: failure_modes.md  rules_shortlist.md  sources.md  tool_shortlist.md
worlds/up_pension/scenarios/: batch_with_anomalies.yaml  benchmark_v1.yaml
