[project]
name = "munshi"
version = "0.1.0"
description = "A testbed for AI agent teams working on Indian bureaucratic workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "fastmcp>=2.0",
    "mcp>=1.0",
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-mcp-adapters>=0.1",
    "inspect-ai>=0.3",
    "anthropic>=0.40",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["munshi*", "worlds*"]
exclude = ["demo*"]
